methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:10: error: not found: value prendreBiscuit
  prendreBiscuit()
  ^